# scotch

./: .gitignore  .project  .travis.yml  CMakeLists.txt
include/: .gitignore
include/win32/sys/: time.h
src/check/: CMakeLists.txt
src/esmumps/: CMakeLists.txt
src/esmumps/ptesmumps/: CMakeLists.txt
src/libscotch/: CMakeLists.txt  common.h  graph.h
src/libscotch/libptscotch/: CMakeLists.txt
src/scotch/: CMakeLists.txt
src/scotch/ptscotch/: CMakeLists.txt
