macro(ADD_EXEC NAME)
    add_executable(${NAME} ${NAME}.c)
    target_link_libraries(${NAME} PRIVATE scotch)
    target_include_directories(${NAME} PRIVATE ../libscotch ${SCOTCH_INC_DIR} .)
endmacro()

ADD_EXEC(acpl)
ADD_EXEC(amk_ccc)
ADD_EXEC(amk_fft2)
ADD_EXEC(amk_grf)
ADD_EXEC(amk_hy)
ADD_EXEC(amk_m2)
ADD_EXEC(amk_p2)
ADD_EXEC(atst)
ADD_EXEC(gbase)
ADD_EXEC(gcv)
ADD_EXEC(gmap)
ADD_EXEC(gmk_hy)
ADD_EXEC(gmk_m2)
ADD_EXEC(gmk_m3)
ADD_EXEC(gmk_msh)
ADD_EXEC(gmk_ub2)
ADD_EXEC(gmtst)
ADD_EXEC(gord)
ADD_EXEC(gotst)

add_executable(gout gout_o.c gout_c.c)
target_link_libraries(gout PRIVATE scotch)
target_include_directories(gout PRIVATE ../libscotch ${SCOTCH_INC_DIR} .)
if (UNIX)
    target_link_libraries(gout PRIVATE m)
endif()

add_executable(gpart gmap.c)
target_link_libraries(gpart PRIVATE scotch)
target_include_directories(gpart PRIVATE ../libscotch ${SCOTCH_INC_DIR} .)
target_compile_definitions(gpart PRIVATE SCOTCH_COMPILE_PART)
ADD_EXEC(gscat)
ADD_EXEC(gtst)
ADD_EXEC(mcv)
ADD_EXEC(mmk_m2)
ADD_EXEC(mmk_m3)
ADD_EXEC(mord)
ADD_EXEC(mtst)

if (BUILD_PTSCOTCH)
    add_subdirectory(ptscotch)
endif()